Fixed heading links issue, spacing in mobiles, image width

--- a/src/Components/Post.css
+++ b/src/Components/Post.css
@@ -19,3 +19,8 @@ h2 {
   margin-bottom: 1rem !important;
   margin-top: 1rem !important;
 }
+
+.DisplayPost img {
+  width: 100%;
+  height: auto;
+}
